fixed overflow on landing page

--- a/public/main/src/scss/components/Home/Header.scss
+++ b/public/main/src/scss/components/Home/Header.scss
@@ -1,8 +1,16 @@
 .home > .top-gradient > .content {
 	$horizontal-padding: 135px;
 	
-	padding: 0 40px;
+	padding: 0 20px;
 	transition: padding 0.3s;
+	
+	@media (min-width: 350px) {
+		padding: 0 30px;
+	}
+	
+	@media (min-width: 400px) {
+		padding: 0 40px;
+	}
 	
 	@media (min-width: 1100px) {
 		padding: 0 ($horizontal-padding / 2);
