--- a/public/main/src/scss/components/Home/Screenshots.scss
+++ b/public/main/src/scss/components/Home/Screenshots.scss
@@ -91,6 +91,7 @@ $transform-length: 100px;
 			
 			> .background {
 				position: absolute;
+				max-width: 100vw;
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%, -50%);
